src/test/test-models/good/keywords-for.stan
parameters {
  real force;
}
model {
  force ~ normal(0,1);
}
