src/test/test-models/bad/reserved/or_eq.stan
data {
  real or_eq;
}
model {
}
